--- a/templates/aluno_resultado.html
+++ b/templates/aluno_resultado.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Document</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     {% endif %}
 
     <br>
-    <a href="/" class="btn-verde">Voltar para o Início</a>
+
 </div>
 
 <a href="{{ url_for('area_aluno') }}" class="btn-verde">Area Aluno</a><br>
