--- a/templates/principal.html
+++ b/templates/principal.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>QuizRush A Melhor Plataforma De Quiz Online</h1>
