comit instanciando poo no flask

--- a/templates/aluno_quiz.html
+++ b/templates/aluno_quiz.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container">
-    <div id="cronometro-container" style="position: sticky; top: 10px; background: #cf8000; color: #fff; padding: 15px; border-radius: 10px; text-align: center; font-size: 1.5em; z-index: 1000;">
+    <div id="cronometro-container" style="position: sticky; top: 10px; background: #212120; color: #fff; padding: 15px; border-radius: 10px; text-align: center; font-size: 1.5em; z-index: 1000;">
     Tempo restante: <span id="tempo">10:00</span>
     </div>
 </div>
@@ -60,7 +60,7 @@
 
 
 <script>
-    // Tempo para teste: 5 segundos. Depois mude para 10 * 60
+
     let tempoEmSegundos = 30; 
 
     const display = document.querySelector('#tempo');
